# building-register

./: .gitignore  LICENSE  Procfile  README.md  TwilioTest.ipynb  app.json  manage.py  pyproject.toml  slack_manifest.yml
buildingregister/: asgi.py  settings.py  urls.py  wsgi.py
buildingregister/settings/: __init__.py
buildingregister/settings/common/: base.py  django_q.py  i18n.py  o365_client.py  sentry.py  slack.py  twilio_client.py  views.py
buildingregister/settings/development/: database.py  environment.py  security.py
buildingregister/settings/production/: environment.py  security.py
extras/qr-generator/: main.py  pyproject.toml
materialize/: apps.py
materialize/templates/materialize/forms/: text.html
materialize/templatetags/: material_forms.py
register/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
register/management/commands/: send-reminders.py
register/migrations/: 0001_initial.py  0002_alter_signinrecord_options.py  0003_auto_20211107_2119.py
register/static/css/: forkongithub.css  main.css
register/templates/register/: contact.html  index.html  login.html  login_form.html  login_message_email.html  login_message_sms.txt  menu.html  profile.html  register.html  register_mode.html  register_submit.html  register_token.html  report.html
register/templates/register/messaging/dev/: login.txt
register/templates/register/messaging/email/: login.html  reminder.html  reminder_pm.html
register/templates/register/messaging/sms/: reminder.txt  reminder_pm.txt
register/util/: auth.py
register/util/signals/: slack.py
register/util/tokens/: __init__.py  abstract_service.py  development_console.py  office365_email.py  resolver.py  twilio_sms.py
register/views/: __init__.py  auth.py  index.py  profile.py  report.py
templates/: base.html
