[tool.poetry]
name = "building-register"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
Django = "^3.2.9"
twilio = "^7.2.0"
django-split-settings = "^1.1.0"
python-dotenv = "^0.19.1"
django-ipware = "^4.0.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
